app-test/testdata/typesystem/neg/type-construction-arg-number/src/cons.cal
namespace cons:
    type T : (int a, bool b) end
    actor WrongArgumentNumber() ==> T OUT:
        do
           OUT <-- T(1, true, 2.5); // error
        end
    end
end